# stellcasp

./: .env.example  .gitignore  CONTRACTS.md  LICENSE  README.md  casper.md  docker-compose.dev.yml  pyproject.toml  pytest.ini  zk_kyc_platform_spec.md
algorand/: .env.example  README.md
algorand/contracts/: passport.py
algorand/scripts/: deploy.py  deploy.sh
aptos/: .env.example  Move.toml  README.md
aptos/scripts/: deploy.sh
aptos/sources/: zk_passport.move
casper/: Cargo.toml  Odra.toml  llms.txt
casper/compliance_oracle/: Cargo.toml
casper/compliance_oracle/src/: compliance_oracle.rs  lib.rs
casper/compliance_oracle/wasm/: ComplianceOracle.wasm
casper/identity_registry/: Cargo.toml
casper/identity_registry/src/: identity_registry.rs  lib.rs
casper/identity_registry/wasm/: IdentityRegistry.wasm
circuits/: Nargo.toml  Noir.toml  Prover.toml
circuits/src/: main.nr
docs/: data_classification.md  passport_adapter_spec.md  privacy_audit.md
docs/grants/: algorand.md  evm_grants.md  hbar_foundation.md  icp.md  pipeline.md  sui_aptos.md  web3_foundation.md
ethereum/: .env.example  README.md  foundry.toml  package.json
ethereum/contracts/: UltraHonkVerifier.sol  UltraVerifier.sol  ZKPassport.sol
ethereum/scripts/: deploy.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentPipelineModal.tsx  EntityGraph.tsx  JurisdictionRiskManager.tsx  PassportMintModal.tsx  ProofGenerationModal.tsx  RelationshipIngestionModal.tsx  SecurityEventLogViewer.tsx  SelectiveDisclosureModal.tsx
hedera/: .env.example  README.md  package.json
hedera/contracts/: HederaZKVerifier.sol  UltraVerifier.sol  ZKPassport.sol
hedera/scripts/: deploy.sh
icp/: .env.example  Cargo.toml  README.md
icp/scripts/: deploy.sh
icp/src/: lib.rs
polkadot/: .env.example  Cargo.toml  README.md
polkadot/.cargo/: config.toml
polkadot/contracts/: lib.rs
polkadot/scripts/: deploy.sh
scripts/: demo_passport.sh  e2e_casper.sh  e2e_stellar.sh  run_neo4j_migrations.py  seed_knowledge_graph.py  tests.sh  ts.sh
stellar/: Cargo.toml
stellar/passport/: Cargo.toml
stellar/src/: lib.rs
sui/: .env.example  Move.toml  README.md
sui/scripts/: deploy.sh
sui/sources/: zk_passport.move
tests/: test_endpoints.py  test_unit.py
tests/conformance/: test_adapter_conformance.py
tests/integration/: test_casper_toolkit.py  test_graph_to_zk.py
tests/unit/: test_toolkit.py
zkkyc/: __init__.py  cli.py  config.py  setup.py  signing.py
zkkyc/adapters/: __init__.py  algorand.py  aptos.py  base.py  casper.py  ethereum.py  hedera.py  icp.py  polkadot.py  registry.py  stellar.py  sui.py
zkkyc/agents/: graph.py  settlement.py
zkkyc/api/: main.py  schemas.py
zkkyc/db/: __init__.py  repos.py
zkkyc/graph/: entity.py  nrs.py
zkkyc/payments/: x402.py
zkkyc/toolkit/: Dockerfile.mcp  __init__.py  cspr_click.py  events.py  mcp_mock.py  mcp_server.py  x402_facilitator.py
zkkyc/zk/: proof.py  stellar.py
(+20 files in other folders)
