[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkkyc"
version = "0.1.0"
description = "ZK-KYC Compliance Agent - Privacy-preserving KYC/AML platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "neo4j>=5.20.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.1.0",
    "pydantic>=2.6.0",
    "langgraph>=0.1.0",
    "langchain-groq>=0.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "locust>=2.16.0",
]

[tool.setuptools.packages.find]
where = ["zkkyc"]
include = ["zkkyc*"]

[project.scripts]
zkkyc = "zkkyc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "e2e: End-to-end tests on testnet",
]