[workspace]
resolver = "2"
members = ["compliance_oracle", "identity_registry"]

[workspace.dependencies]
odra = { version = "2.8.2", features = [], default-features = false }
odra-test = { version = "2.8.2", features = [], default-features = false }
odra-build = { version = "2.8.2", features = [], default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3