[package]
name = "zkkyc-polkadot"
version = "1.0.0"
authors = ["ZK-KYC Team"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false, features = ["std"] }
scale = { package = "parity-scale-codec", version = "4.0.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
ink_e2e = { version = "4.3.0" }

[lib]
path = "contracts/lib.rs"

[[bin]]
name = "zkkyc-polkadot"
path = "contracts/lib.rs"
required-features = ["std"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "serde",
]
e2e-tests = ["ink/e2e-tests", "std"]
